--- a/styles/global.css
+++ b/styles/global.css
@@ -15,13 +15,20 @@ body {
     Droid Sans,
     Helvetica Neue,
     sans-serif;
+    line-height: 1.6;
+    font-size: 18px;
 }
 
 a {
-  color: inherit;
+  color: #0070f3;
   text-decoration: none;
+  transform: transition .5s ease;
 }
+a:hover {
+  text-decoration: underline;
+  transform: transition .5s ease;
 
+}
 * {
   box-sizing: border-box;
 }
@@ -29,4 +36,5 @@ a {
 img {
   max-width: 100%;
   height: auto;
+  display: block;
 }
